/*
 * $Id: ChangeLog,v 1.1403 2003/09/03 01:17:40 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-09-02 18:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/memvars.c
    ! Fixed memory leak related to Array Owner management. This also eliminate warning generation to Trace.log file

2003-09-03 08:05 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * source/common/reserved.c
     + Add option to omit reserved words by adding -DHB_RESERVED_OFF (default is ON)

     /*
     This may be useful when one is working with pCode DLL where he must redefine
     reserved words as dummy functions in the DLL.
     */

2003-09-03 07:30 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * source/rtl/inkey.c
   * source/rtl/gtstd/gtstd.c
     ! Minor modifications on platform definitions due to recent changes.

2003-09-02 17:31 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbrddcdx.h
  * source/rdd/dbfcdx/dbfcdx1.h
    + Added missing reset of #pragma pack() for MSVC.

  * source/rdd/dbcmd.c
  * source/rdd/dbf1.c
  * source/rdd/dbfcdx/dbfcdx1.c
  * source/rdd/dbfntx/dbfntx1.c
    - Removed unneeded BOOL bMathName from rddMoveFields() and replaced with if( pFields ).
    ! Fixed GPF in GetTheOtherArea() resulting from attemting to convert case of static buffer (field name).
    * Many Formating fixes.

  * source/vm/errorapi.c
    ! Fixed GPF trap in hb_errPutFileName() when file name is NULL.

2003-09-03 05:45 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * source/rtl/inkey.c
   * source/rtl/gtwin/gtwin.c
     ! When CapsLock is on, numeric keys ( eg. 1, 2 ) does not echo
       the correct key-pressed value. Fixed.

     /*
     This is a work around for HB_OS_WIN_32_USED environment. If others
     have a better solution, improvement is appreciated.
     */
